[package]
name = "bi-sdk-backend"
version = "0.1.0"
authors = ["Ismail Mustafa <ismail.mustafa@beyondidentity.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_json = "1"
reqwest = "0"
actix-web = "4.0.0-beta.5"
tokio = { version = "1.4.0", features = ["time"] }
